Closed Bug 1402285 Opened 7 years ago Closed 7 years ago

stylo: Crash in core::option::expect_failed | geckoservo::glue::Servo_Element_IsPrimaryStyleReusedViaRuleNode

Categories

(Core :: CSS Parsing and Computation, defect, P2)

57 Branch
Unspecified
Windows 10
defect

Tracking

()

VERIFIED FIXED
mozilla58
Tracking Status
firefox-esr52 --- unaffected
firefox55 --- unaffected
firefox56 --- unaffected
firefox57 --- fixed
firefox58 --- fixed

People

(Reporter: calixte, Assigned: bholley)

References

(Blocks 1 open bug)

Details

(Keywords: crash, regression, Whiteboard: [clouseau])

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is 
report bp-67b49e6c-d31e-45b3-8b7c-c49380170921.
=============================================================

There are 7 crashes from 2 installations in nightly 57.0a1 with buildid 20170921100141. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1401317.

[1] https://hg.mozilla.org/mozilla-central/rev?node=4d6c6ad5642940e66b7a6714d3fd16633682fe5d
Flags: needinfo?(bobbyholley)
Crash Signature: [@ core::option::expect_failed | geckoservo::glue::Servo_Element_IsPrimaryStyleReusedViaRuleNode] → [@ core::option::expect_failed | geckoservo::glue::Servo_Element_IsPrimaryStyleReusedViaRuleNode] [@ mozalloc_abort | abort | core::option::expect_failed | geckoservo::glue::Servo_Element_IsPrimaryStyleReusedViaRuleNode]
Assignee: nobody → bobbyholley
Flags: needinfo?(bobbyholley)
Priority: -- → P2
MozReview-Commit-ID: C4JNZFtYHBH
Attachment #8911411 - Flags: review?(emilio)
Comment on attachment 8911411 [details] [diff] [review]
Don't try to cache pseudo styles with an unstyled originating element. v1

Review of attachment 8911411 [details] [diff] [review]:
-----------------------------------------------------------------

This is fine, but we should probably dig into it anyway...
Attachment #8911411 - Flags: review?(emilio) → review+
(In reply to Emilio Cobos Álvarez [:emilio] from comment #2)
> Comment on attachment 8911411 [details] [diff] [review]
> Don't try to cache pseudo styles with an unstyled originating element. v1
> 
> Review of attachment 8911411 [details] [diff] [review]:
> -----------------------------------------------------------------
> 
> This is fine, but we should probably dig into it anyway...

You mean the question of "why we have an unstyled originating element in nsMathMLFrame::ResolveMathMLCharStyle"? I was sorta hoping to avoid digging into that part. :-)
Pushed by bholley@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6cb6f41aea09
Don't try to cache pseudo styles with an unstyled originating element. r=emilio
https://hg.mozilla.org/mozilla-central/rev/6cb6f41aea09
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
Please request Beta approval on this when you get a chance.
Flags: needinfo?(bobbyholley)
Version: 58 Branch → 57 Branch
Comment on attachment 8911411 [details] [diff] [review]
Don't try to cache pseudo styles with an unstyled originating element. v1

Approval Request Comment
[Feature/Bug causing the regression]: bug 1401317
[User impact if declined]: Crashes
[Is this code covered by automated tests?]: No
[Has the fix been verified in Nightly?]: (Yes, verified now)
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]: None
[Is the change risky?]: No.
[Why is the change risky/not risky?]: Basically just a null check to skip a caching optimization.
[String changes made/needed]: None
Flags: needinfo?(bobbyholley)
Attachment #8911411 - Flags: approval-mozilla-beta?
(In reply to Bobby Holley (:bholley) (busy with Stylo) from comment #7)
> Approval Request Comment
> [Has the fix been verified in Nightly?]: (Yes, verified now)

Yes, no new crashes since 9/22.
Status: RESOLVED → VERIFIED
Comment on attachment 8911411 [details] [diff] [review]
Don't try to cache pseudo styles with an unstyled originating element. v1

Fix a crash, taking it.
Should be in 57b4
Attachment #8911411 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: