Bug 1402285 - Don't try to cache pseudo styles with an unstyled originating element. r=emilio, a=sledru

MozReview-Commit-ID: C4JNZFtYHBH